heapuse-tests/tests/ui/fail-derive-wrong-attrs-skip.stderr
error: `#[heap_size(skip)]` is only allow with a container attribute `#[heap_size]`.
 --> tests/ui/fail-derive-wrong-attrs-skip.rs:6:17
  |
6 |     #[heap_size(skip)]
  |                 ^^^^

error: `#[heap_size(skip)]` is only allow with a container attribute `#[heap_size]`.
  --> tests/ui/fail-derive-wrong-attrs-skip.rs:12:17
   |
12 |     #[heap_size(skip)]
   |                 ^^^^
